--- a/HSE_transport_manager/View/ControlView.xaml
+++ b/HSE_transport_manager/View/ControlView.xaml
@@ -7,6 +7,28 @@
         mc:Ignorable="d"
         Title="ControlView" Height="300" Width="300">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="30"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Name="lbl_uber" Content="Uber API Status" Grid.Row="1"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="0,2" Width="92"/>
+        <Label Name="lbl_yandex" Content="Yandex Schedule Status" Grid.Row="2"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="0,2" Width="138"/>
+        <Label Name="lbl_errors" Content="Unhandled errors occured" Grid.Row="3"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="0,2" Width="149" Grid.ColumnSpan="2"/>
+        <Label Name="lbl_uber_OK" Content="OK" Grid.Row="1"  Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Name="lbl_yandex_OK" Content="OK" Grid.Row="2"  Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Name="lbl_errors_counter" Content="0" Grid.Row="3"  Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Image Name="img_bot" Source="..\..\HSE_transport_manager\Resources\bot.png" HorizontalAlignment="Left" Height="121" Margin="-3,15,0,0" Grid.RowSpan="4" VerticalAlignment="Top" Width="143" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <Label Name="lbl_status" Content="Bot is active!" FontSize="18" Foreground="Green" Grid.Row="4"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Button Name="btn_start" Content="Start Bot" Grid.Column="1" FontSize="10" HorizontalAlignment="Left" Height="23" Margin="-15,27,15,27" Grid.Row="5" VerticalAlignment="Center" Width="79" Grid.ColumnSpan="2"/>
+        <Button Name="btn_view" Content="View Log File" Grid.Column="1" FontSize="10" HorizontalAlignment="Right" Height="23" Margin="0,27,15,27" Grid.Row="5" VerticalAlignment="Center" Width="79" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
