--- a/HSE_transport_manager/View/MainWindow.xaml
+++ b/HSE_transport_manager/View/MainWindow.xaml
@@ -1,22 +1,39 @@
-﻿<controls:MetroWindow x:Class="HSE_transport_manager.MainWindow"
+﻿<Controls:MetroWindow x:Class="HSE_transport_manager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="MainWindow" Height="350" Width="525" MaxHeight="350" MinHeight="350" MaxWidth="525" MinWidth="525"
-                      DataContext="{Binding Main, Source={StaticResource Locator}}">
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        Title="HSE transport manager" Height="400" Width="600"
+        BorderThickness="0" 
+        GlowBrush="Black"
+        DataContext="{Binding Main, Source={StaticResource Locator}}">
+
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Content="About bot" Command="{Binding AboutCommand}"/>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="60"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Name="btn_control" Content="Control" Command="{Binding ControlViewCommand}"/>
-        <Button Name="btn_settings" Content="Settings" Grid.Column="1" Command="{Binding SettingsViewCommand}"/>
-        <Button Name="btn_statiscs" Content="Statistics" Grid.Column="2" Command="{Binding StatisticsViewCommand}"/>
-        <ContentControl Grid.Row="1" Grid.ColumnSpan="3" Content="{Binding CurrentViewModel}"/>
+        <Grid Grid.Row="0" Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                <Hyperlink Command="{Binding StatusCommand}" TextDecorations="None" Foreground="#FFD5D5D5" FontSize="25">Status</Hyperlink>
+            </Label>
+            <Label Grid.Column="1" BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                <Hyperlink Command="{Binding SettingsCommand}" TextDecorations="None" Foreground="#FFD5D5D5" FontSize="25">Settings</Hyperlink>
+            </Label>
+        </Grid>
+        <ContentControl Grid.Row="1" Grid.ColumnSpan="2" Content="{Binding CurrentViewModel}" />
     </Grid>
-</controls:MetroWindow>
+</Controls:MetroWindow>
