--- a/HSE_transport_manager/View/AboutView.xaml
+++ b/HSE_transport_manager/View/AboutView.xaml
@@ -1,9 +1,10 @@
 ﻿<UserControl x:Class="HSE_transport_manager.View.AboutView"
+             xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:local="clr-namespace:HSE_transport_manager.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
     <Grid>
@@ -18,13 +19,13 @@
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-            <TextBlock TextWrapping="Wrap" TextAlignment="Justify" >
-                Team: Bulgakov D., Rogova D., Trofimenko A.
-                <LineBreak/>
-                <LineBreak/>
-                About:
-                <LineBreak/>
-                This app provides an opportunity to manage a route from one point (dormitory or hse building) to another one using TG bot. Moreover, it uses different means of transport (local train, tram, bus, taxi, subway) and finds the fastest way depending on student budget.
+            <TextBlock TextWrapping="Wrap" TextAlignment="Justify" > 
+Team: Bulgakov D., Rogova D., Trofimenko A. 
+<LineBreak/> 
+<LineBreak/> 
+About: 
+<LineBreak/> 
+This app provides an opportunity to manage a route from one point (dormitory or hse building) to another one using TG bot. Moreover, it uses different means of transport (local train, tram, bus, taxi, subway) and finds the fastest way depending on student budget.
             </TextBlock>
         </Label>
         <Image Grid.Row="1" Grid.Column="1" Source="/HSE_transport_manager;component/Resources/yandex.png" />
