--- a/HSE_transport_manager/View/SettingsView.xaml
+++ b/HSE_transport_manager/View/SettingsView.xaml
@@ -41,7 +41,7 @@
                 <ColumnDefinition Width="0.5*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Content="Update" Style="{StaticResource AccentedSquareButtonStyle}" FontSize="16" Controls:ControlsHelper.ContentCharacterCasing="Normal" BorderThickness="0" Margin="0,5,5,5"/>
+            <Button Grid.Column="0" Command="{Binding UpdateCommand}" Content="Update" Style="{StaticResource AccentedSquareButtonStyle}" FontSize="16" Controls:ControlsHelper.ContentCharacterCasing="Normal" BorderThickness="0" Margin="0,5,5,5"/>
             <Button Grid.Column="2" Content="Remove" Controls:ControlsHelper.ContentCharacterCasing="Normal" FontSize="16" BorderThickness="0" Margin="5,5,0,5"/>
         </Grid>
         <Grid Grid.Row="7" Grid.Column="2">
