--- a/HSE_transport_manager/View/MainWindow.xaml
+++ b/HSE_transport_manager/View/MainWindow.xaml
@@ -35,5 +35,6 @@
             </Label>
         </Grid>
         <ContentControl Grid.Row="1" Grid.ColumnSpan="2" Content="{Binding CurrentViewModel}" />
+        <StatusBar HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="15" Width="600" Grid.ColumnSpan="2" Grid.Row="1"/>
     </Grid>
 </Controls:MetroWindow>
