--- a/HSE_transport_manager/Resources/PictureDictionary.xaml
+++ b/HSE_transport_manager/Resources/PictureDictionary.xaml
@@ -4,4 +4,5 @@
     <ImageSource x:Key="bot">HSE_transport_manager/Resources/bot.png</ImageSource>
     <ImageSource x:Key="yandex">HSE_transport_manager/Resources/yandex.png</ImageSource>
     <ImageSource x:Key="uber">HSE_transport_manager/Resources/uber.png</ImageSource>
+    <ImageSource x:Key="google">HSE_transport_manager/Resources/google.png</ImageSource>
 </ResourceDictionary>
